chore: fix body overflow

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -13,7 +13,7 @@ body {
   @apply bg-neutral-7;
 }
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 #root {
   height: 100%;
